--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             if (hasGift === 'oui') {
                 quizContainer.innerHTML = `
                     <h1>${userName} regarde en haut à gauche</h1>
-                    <img src="pepe.JPG" alt="Image d'illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
+                    <img src="pepe.jpg" alt="Image d'illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
                 `;
                 displaySpecialMessages();
             } else {
